[project]
name = "stock-mcp-server"
version = "0.1.0"
description = "MCP server for paper trading stocks via Alpaca"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "alpaca-py>=0.21.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project.scripts]
stock-mcp-server = "server:main"
